@@ -9,7 +9,7 @@ object category protocol module
 encoding export reexport
 info initialization
 public protected private
-dynamic discontiguous multifile
+dynamic discontiguous multifile coinductive
 mode meta_predicate alias synchronized
 end_object end_category end_protocol
 uses use_module
