@@ -5,9 +5,9 @@
 <!--	jEdit 4.3 Logtalk syntax file
 
 	written by		Paulo Moura
-	version			1.95
+	version			1.96
 	created on		May 5, 2002
-	last revised	August 10, 2010
+	last revised	September 14, 2010
 
 	To install, copy this file to the "modes" subdirectory in jEdit 
 	directory installation.   Next, check the "catalog" file in the 
@@ -52,7 +52,7 @@
 		<SEQ_REGEXP AT_WORD_START="TRUE" TYPE="KEYWORD1">^\s*:-\s(dynamic|synchronized|threaded)(?=[.])</SEQ_REGEXP>
 		<SEQ_REGEXP AT_WORD_START="TRUE" TYPE="KEYWORD1">^\s*:-\s(alias|d(ynamic|iscontiguous)|m(eta_predicate|ode|ultifile)|s(et_(logtalk|prolog)_flag|ynchronized))(?=[(])</SEQ_REGEXP>
 		<SEQ_REGEXP AT_WORD_START="TRUE" TYPE="KEYWORD1">^\s*:-\sop(?=[(])</SEQ_REGEXP>
-		<SEQ_REGEXP AT_WORD_START="TRUE" TYPE="KEYWORD1">^\s*:-\s(calls|reexport|use(s|_module))(?=[(])</SEQ_REGEXP>
+		<SEQ_REGEXP AT_WORD_START="TRUE" TYPE="KEYWORD1">^\s*:-\s(c(alls|oinductive)|reexport|use(s|_module))(?=[(])</SEQ_REGEXP>
 		<SEQ_REGEXP AT_WORD_START="TRUE" TYPE="KEYWORD1">(complements|extends|i(nstantiates|mp(lements|orts))|specializes)(?=[(])</SEQ_REGEXP>
 
 		<!-- Event handlers -->
@@ -262,6 +262,7 @@
 			<NULL>char_conversion</NULL>
 			<NULL>clause</NULL>
 			<NULL>close</NULL>
+			<NULL>coinductive</NULL>
 			<NULL>compare</NULL>
 			<NULL>complements</NULL>
 			<NULL>complements_object</NULL>
@@ -320,6 +321,7 @@
 			<NULL>logtalk_load_context</NULL>
 			<NULL>meta_predicate</NULL>
 			<NULL>mode</NULL>
+			<NULL>multifile</NULL>
 			<NULL>nl</NULL>
 			<NULL>nonvar</NULL>
 			<NULL>number</NULL>
