@@ -42,9 +42,9 @@ comment
 	extends(parent)).
 
 	:- info([
-		version is 1.2,
+		version is 1.3,
 		author is &#x27;Paulo Moura&#x27;,
-		date is 2010/06/23,
+		date is 2010/09/14,
 		comment is &#x27;Sample prototype for testing syntax coloring.&#x27;]).
 
 	:- threaded.
@@ -66,6 +66,8 @@ comment
 	:- multifile(zzz/1).
 	:- multifile(module:zzz/1).
 	:- multifile(object::zzz/1).
+
+	:- coinductive(comember/1).
 
 	:- use_module(module, [xxx/1, yyy/2, zzz/3]).
 	:- export(bbb/3).
