@@ -235,7 +235,7 @@
 				<regex>:-\s(p(?:ublic|r(?:otected|ivate)))\(</regex>
 				<regex>:-\s(m(?:eta_predicate|ultifile))\(</regex>
 				<regex>:-\s(op)\(</regex>
-				<regex>:-\s(calls)\(</regex>
+				<regex>:-\s(c(?:alls|oinductive))\(</regex>
 				<regex>:-\s(use(?:s|_module))\(</regex>
 				<regex>:-\s(reexport)\(</regex>
 				<regex>:-\s(s(?:et_(?:logtalk|prolog)_flag|ynchronized))\(</regex>
