@@ -34,6 +34,7 @@
 			<string>meta_predicate</string>
 			<string>mode</string>
 			<string>multifile</string>
+			<string>coinductive</string>
 			<string>op</string>
 			<string>private</string>
 			<string>protected</string>
