@@ -109,6 +109,7 @@ info
 mode
 meta_predicate
 multifile
+coinductive
 public
 protected
 private
